--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <li class="nav-item"><a class="nav-link" href="#" data-scroll-nav="1">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-scroll-nav="2">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" data-scroll-nav="3">Services</a></li>
-                    <div class="butn-light"><a href="tel:+256 773-536-7789" target=""><span>Call <i class="fa fa-phone" aria-hidden="true"></i></span></a></div>
+                    <div class="butn-light"><a href="tel:+1773-534-7789" target=""><span>Call <i class="fa fa-phone" aria-hidden="true"></i></span></a></div>
                 </ul>
             </div>
         </div>
@@ -92,7 +92,7 @@
                                 <p>We offer interior cleaning for all houses,
                                   <br>Appartments
                                 </p>
-                                <div class="butn-light mt-30 mb-30"><a href="mailto:" target=""><span>Make appointment</span></a></div>
+                                <div class="butn-light mt-30 mb-30"><a href="mailto:abaasaturyamureba2244@gmail.com" target=""><span>Make appointment</span></a></div>
                             </div>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                                 <h1>MOVE IN / MOVE OUT CLEANING</h1>
                                 <p>If you are moving into a new house or moving out of an old one, we got you.
                                 </p>
-                                <div class="butn-light mt-30 mb-30"><a href="mailto:" target=""><span>Make appointment</span></a></div>
+                                <div class="butn-light mt-30 mb-30"><a href="mailto:abaasaturyamureba2244@gmail.com" target=""><span>Make appointment</span></a></div>
                             </div>
                         </div>
                     </div>
@@ -422,7 +422,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <p><small>You can create an appointment here or contact us at <b>appointment@abaasacleaners.com</b>.</small></p>
+                        <p><small>You can create an appointment here or contact us at <b>abaasaturyamureba2244@gmail.com</b>.</small></p>
                     </div>
                 </div>
             </div>
@@ -486,16 +486,16 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <p>Abaasa Cleaners kampala, Uganda.</p>
+                        <p>Abaasa mobile cleaners, Bronx, New York City.</p>
                         <p><b>P.O BOX :</b> 787 kampala</p>
                     </div>
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <p><b>Phone :</b> +256 773-536-7789</p>
-                        <p><b>Email :</b> appointment@abaasacleaners.com</p>
-                        <p><b>Address :</b> 24 William Street, kampala, Uganda.</p>
+                        <p><b>Phone :</b> +1773-534-7789</p>
+                        <p><b>Email :</b> abaasaturyamureba2244@gmail.com</p>
+                        <p><b>Address :</b> Bronx, New York City.</p>
                     </div>
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInUp">
-                        <form method="post" class="contact__form" action="http://duruthemes.com/demo/html/bauen/fullscreen-onepage-dark/mail.php">
+                        <form method="post" class="contact__form" action="https://formspree.io/f/xgedldrb">
                             <!-- Form message -->
                             <div class="row">
                                 <div class="col-12">
@@ -514,9 +514,6 @@
                                 </div>
                                 <div class="col-md-6 form-group">
                                     <input name="phone" type="text" placeholder="Your Number *" required>
-                                </div>
-                                <div class="col-md-12 form-group">
-                                    <input name="subject" type="text" placeholder="Subject *" required>
                                 </div>
                                 <div class="col-md-12 form-group">
                                     <textarea name="message" id="message" cols="30" rows="4" placeholder="Message *" required></textarea>
@@ -635,7 +632,7 @@
                             <div class="fothead">
                                 <h6>Phone</h6>
                             </div>
-                            <p>+256 773-536-7789</p>
+                            <p>+1773-534-7789</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
@@ -643,7 +640,7 @@
                             <div class="fothead">
                                 <h6>Email</h6>
                             </div>
-                            <p>appointment@abaasacleaners.com</p>
+                            <p>abaasaturyamureba2244@gmail.com</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
@@ -651,7 +648,7 @@
                             <div class="fothead">
                                 <h6>Our Address</h6>
                             </div>
-                            <p>24 William Street, kampala, Uganda.</p>
+                            <p>Bronx, New York City.</p>
                         </div>
                     </div>
                 </div>
@@ -693,6 +690,4 @@
     <script src="js/before-after.js"></script>
     <script src="js/custom.js"></script>
 </body>
-
-<!-- Mirrored from duruthemes.com/demo/html/bauen/fullscreen-onepage-dark/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Apr 2022 07:02:10 GMT -->
 </html>
