--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
                         <h2 class="section-title">About <span>Abaasa Cleaners</span></h2>
-                        <p>Abaasa Cleaners are located in kampala offering cleaning services across the country.</p>
+                        <p>Abaasa Cleaners are located in Bronx, New York City offering cleaning services across the country.</p>
                         <p>We offer cleaning services for the whole house, one - time sweeps, deep cleanings, carpet and tile mopping.</p>
                         <p>We will vacuum, mop, clean bathtubs, tiles, vacuums, toilets, blinds, beds, laundry and vacuum.</p>
                         <p>We are licensed, insured and bonded.</p>
@@ -487,7 +487,7 @@
                 <div class="row">
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
                         <p>Abaasa mobile cleaners, Bronx, New York City.</p>
-                        <p><b>P.O BOX :</b> 787 kampala</p>
+                        <p><b>P.O BOX :</b> - - - Bronx, New York City</p>
                     </div>
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
                         <p><b>Phone :</b> +1773-534-7789</p>
